fix modal layout: KP-6882 Designer: layout problem on Compile errors and Warnings lists in reduced browser window

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-verify-popover.css.less
@@ -23,7 +23,8 @@
         height: 100%;
         border: none;
         position: relative;
-        min-width: 275px;
+        min-width: 610px;
+		min-height: 220px;
 
         .modal-header {                       
             font-size: 36px;          
@@ -51,7 +52,7 @@
 
         .modal-body {
             padding: 0px;
-            height: 100%;
+            height: calc(100% - 115px);
 
             .error-message {
                 .georgia-font();
